--- a/SCT_02Servlet4Login/servlet/WebContent/loginerror_stuid33.html
+++ b/SCT_02Servlet4Login/servlet/WebContent/loginerror_stuid33.html
@@ -10,7 +10,7 @@
 <p align="center">用户名或密码错误</p>
 <br/>
 <div align="center">
-<a href="index2.html">重新登录请访问</a>
+<a href="login_stuid33.html">重新登录请访问</a>
 </div>
 </body>
 </html>
