--- a/SCT_02Servlet4Login/servlet/WebContent/login_stuid33.html
+++ b/SCT_02Servlet4Login/servlet/WebContent/login_stuid33.html
@@ -8,8 +8,7 @@
 <h1 align="center">用户登录</h1>
 <br/>
 <br/>
-<form action="servlet1" method="post" target="_blank">
-<p align="center">用户名或密码错误,请重新登陆</p>
+<form action="loginCheck_stuid33" method="post" target="_blank">
 <p align="center">登录名<input type="text" name="account"></p>
 <p align="center">密码<input type="password" name="password"></p>
 <p align="center"><input type="reset" value="重置">&nbsp&nbsp<input type="submit" value="提交" ></p>
